# SafeDrop

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  config.py  crypto.py  download.py  id_generator.py  logger.py  main.py  metadata.py  pyproject.toml  requirements.txt  security.py  storage.py  test_id_generator.py  test_security.py  upload.py
tests/: test_crypto.py  test_flatten_storage.py  test_id_generator.py  test_metadata.py  test_security.py  test_storage.py
