[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safedrop"
version = "1.0.0"
description = "A secure command-line file sharing tool"
authors = [{ name = "Vision KC" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["file-sharing", "security", "cli", "encryption"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41.0.0",
    "rich>=13.7.0",
]

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "crypto",
    "download",
    "id_generator",
    "logger",
    "metadata",
    "security",
    "storage",
    "upload",
    "__main__"
]

[project.scripts]
safedrop = "__main__:main"
